# .dotfiles

./: .gitattributes  .p10k.zsh  .zsh_history  .zshrc  install.sh
.config/: .~lock.konsolerc#  PlasmaDiscoverUpdates  QtProject.conf  Trolltech.conf  assets  dolphinrc  emailidentities  gtkrc  gtkrc-2.0  kactivitymanagerd-statsrc  kactivitymanagerdrc  kcminputrc  kconf_updaterc  kdeglobals  kdfrc  kglobalshortcutsrc  klinesrc  konquerorrc  kplymouththemeinstallerrc  krdpserverrc  krunnerrc  kuriikwsfilterrc  kwinoutputconfig.json  kwinrc  mimeapps.list  plasma-org.kde.plasma.desktop-appletsrc  plasmarc  plasmashellrc  sddmthemeinstallerrc  skladnikrc
.config/Code - Insiders/: DIPS  Network Persistent State  Preferences  TransportSecurity  machineid
.config/Electron/: DIPS  Network Persistent State
.config/Joplin/: DIPS  Network Persistent State  Preferences  TransportSecurity
.config/KDE/: UserFeedback.conf
.config/akonadi/: akonadiserverrc
.config/ardour8/: ui_config
.config/balenaEtcher/: DIPS  Network Persistent State  Preferences  TransportSecurity
.config/copyq/: copyq.pub
.config/dconf/: user
.config/discordptb/: .org.chromium.Chromium.4oGxjq  .org.chromium.Chromium.94eT67  .org.chromium.Chromium.aU1BEJ  .org.chromium.Chromium.ghQE6w  Cookies  DIPS  DIPS-shm  (+12 more)
.scripts/: record.sh  zoom.sh
Projects/C/GMusic/: meson.build
Projects/C/GMusic/.cache/clangd/index/: main.c.410B0461F7C01BE3.idx  track.c.4C0971A4CEC03456.idx  track.h.E2A500D641882951.idx
Projects/C/GMusic/data/: style.css  style.scss
Projects/C/GMusic/src/: main.c  track.c  track.h
(+5101 files in other folders)
